# Kleos

./: .gitignore  COMMANDS_REFERENCE.md  Command-references.md  DOCKERFILE  IMP_DOCS.md  Quest-Tasks.md  Quick-examples.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup-dev.sh
config/: __init__.py  config.example.py  config.py.example
docs/: Command-references.md
src/: __init__.py  main.py
src/commands/: __init__.py  ai_commands.py  job_commands.py  kb_commands.py  setup_commands.py  utils.py
src/core/: mindsdb_handler.py
src/report_scripts/: benchmark_report.py  reranking_eval_report.py  stress_test_report.py
